# User-Agent-Model-UAM

./: .gitignore  AGENTS.md  README.md  SHA256SUMS  UAM Model Participation and Assurance Plan — displaced active-set snapshot (2026-06-20) [d7a4327e7a3b].md  UAM Source Intake and Context Map — displaced active-set snapshot (2026-06-20) [d534a2a08ea5].md  UAM_Adoption_and_Rollback_Register.yaml  UAM_Artifact_Naming_and_Archive_Convention.md  UAM_Conflict_Register.yaml  UAM_Model_Participation_and_Assurance_Plan.md  UAM_Source_Authority_Register.yaml  UAM_Source_Intake_and_Context_Map.md  clone-uam-repo.ps1  init-uam-repo-layout.ps1
scripts/omr/minimum-composition-harness/: .gitignore  BUILD_TEST_RESULTS.json  CLAUDE_CODE_FUTURE_ADAPTER.md  CODEX_QUICKSTART.md  CUSTODIAN_RUNBOOK.md  EVALUATOR_HANDOFF_GUIDE.md  HARNESS_BUILD_VALIDATION.md  HARNESS_CHECKSUMS.json  HARNESS_O2_REFERENCE_PATCH_RECORD_2026-06-19.md  HARNESS_O3_O4_PROMPT_PATCH_RECORD_2026-06-19.md  HARNESS_R2_CLEAN_SMOKE_RECORD_2026-06-19.md  HARNESS_REFRESH_RECORD_2026-06-19.md  MIGRATION_NOTES_v0.1_to_v0.2.md  PACKAGE_MANIFEST.md  README.md  USAGE_WINDOWS_AND_CREDITS.md  pyproject.toml
scripts/omr/minimum-composition-harness/authorities_current/: AB_GoalCompleteness_Procedure_and_Evals_v1.1.md  AB_Runtime_Authority_Reference_v1.1.md  AGENTS.md  HARNESS_SOURCE_LOCK.json  OMR_Operator_Prototype_Runtime_v0.2.md
scripts/omr/minimum-composition-harness/configs/: api_smoke.yaml  api_smoke_r2.yaml  manual_pilot.example.yaml  run_series.example.yaml
scripts/omr/minimum-composition-harness/scripts/: run_batch.ps1  (+7 more)
(+263 files in other folders)
